# ai-tax

./: .gitignore  AGENTS.md  README.md  TAX_AGENTS.md  pyproject.toml  pyrightconfig.json
.zed/: settings.json
config/: app.example.yaml
src/ai_tax/: __init__.py  config.py  llm.py  main.py
src/ai_tax/agents/: __init__.py  hello_world.py  test_agent.py
src/ai_tax/tools/: __init__.py  currency_tools.py  irs_tools.py  math_tools.py
src/ai_tax/utils/: __init__.py  irs_documents.py  rounding.py
tests/: test_config.py  test_irs_documents.py  test_llm.py
